@@ -6,6 +6,8 @@ v0.1.1.0
 
 Not released yet.
 
+- New: DeleteAsync() deletes all contents from ResourceName endpoint.
+- New: DeleteAsync(resourceName) deletes all contents from resourceName endpoint.
 - New: .NET4 PCL
 - New: .NET45 PCL
 - New: Support for bulk PostAsync methods.
